--- a/index.html
+++ b/index.html
@@ -287,16 +287,16 @@
 									 Proficient in Advance SQL, Power BI, Tableau and Excel, possess a strong foundation in data analysis and visualization.
 									 My expertise lies in extracting meaningful insights from data to drive informed decision-making.
 									 Committed to delivering accurate and actionable analyses, 
-									 and I continually seek opportunities to enhance my skills and contribute effectively to data-driven projects. 
+									 and continually seek opportunities to enhance my skills and contribute effectively to data-driven projects. 
 								</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Data Analytics,Technology</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi, Kanadda</span></li>
-									<li class="d-flex"><span>Tools:</span> <span>Microsoft Power BI, &amp; Tableau</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>Power BI, &amp; Tableau</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Python, Excel,Advance SQL,Numpy,Pandas </span></li>
-									<li class="d-flex"><span>Interpersonal Skills:</span> <span>Negotiation and conflict Resolution,          Self-Motivation,Teamwork </span></li>
+									<li class="d-flex"><span>Interpersonal Skills:</span> <span>Negotiation and conflict resolution,          Self-Motivation,Teamwork </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
 									
 								</ul>
