--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+	          	<div class="one-third js-fullheight order-md-last img">
+					<!-- style="background-image:url(images/bg_1.png);" -->
 	          	 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -186,7 +187,7 @@
 
 						<br>
 						<br>
-			            <h2>A Data Analyst</h2>
+			            <h2>Data Analyst</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p>
@@ -213,7 +214,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="images/about-me.jpg" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -295,7 +296,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi, Kanadda</span></li>
 									<li class="d-flex"><span>Tools:</span> <span>Power BI, &amp; Tableau</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Python, Excel,Advance SQL,Numpy,Pandas </span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Python, Excel,Advance SQL,Numpy,Pandas ujyhh</span></li>
 									<li class="d-flex"><span>Interpersonal Skills:</span> <span>Negotiation and conflict resolution,          Self-Motivation,Teamwork </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
 									
