--- a/index.html
+++ b/index.html
@@ -340,8 +340,9 @@
 				<h1 class="big big-2">Certification</h1>
 				<h2 class="mb-4">Certification</h2>
 				<p>- PGP in IT Mangement ( Oct/2023 - Pursing )</p>
-				 <p>- SQL Basic certification on HackerRank
-				</p>
+				<p>- SQL Basic certification on HackerRank<a href="https://drive.google.com/file/d/1WU2lipVpl2tf5wiKihdMxOmDftLUEUzp/view?usp=drive_link"> (View) </a></p>
+				<p>- AWS Academy Graduate–AWS Academy Cloud Foundations<a href="https://drive.google.com/file/d/157qT4XGCF3LBqEttDukY3Xz7Wrwq2WwS/view?usp=drive_link"> (View) </a></p>
+				<p>- Intern Web Developer<a href="https://drive.google.com/file/d/1iKQTvNDItVE2jPktuMho9TvzJWJP6bN7/view?usp=drive_link"> (View) </a></p>
 			</div>
 		</div>
 
