--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi, Kanadda</span></li>
 									<li class="d-flex"><span>Tools:</span> <span>Power BI, &amp; Tableau</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Python, Excel,Advance SQL,Numpy,Pandas ujyhh</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Python, Excel,Advance SQL,Numpy,Pandas</span></li>
 									<li class="d-flex"><span>Interpersonal Skills:</span> <span>Negotiation and conflict resolution,          Self-Motivation,Teamwork </span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
 									
@@ -342,7 +342,7 @@
 				<p>- PGP in IT Mangement ( Oct/2023 - Pursing )</p>
 				<p>- SQL Basic certification on HackerRank<a href="https://drive.google.com/file/d/1WU2lipVpl2tf5wiKihdMxOmDftLUEUzp/view?usp=drive_link"> (View) </a></p>
 				<p>- AWS Academy Graduate–AWS Academy Cloud Foundations<a href="https://drive.google.com/file/d/157qT4XGCF3LBqEttDukY3Xz7Wrwq2WwS/view?usp=drive_link"> (View) </a></p>
-				<p>- Intern Web Developer<a href="https://drive.google.com/file/d/1iKQTvNDItVE2jPktuMho9TvzJWJP6bN7/view?usp=drive_link"> (View) </a></p>
+				<p>- Intern Web Develope (2021)<a href="https://drive.google.com/file/d/1iKQTvNDItVE2jPktuMho9TvzJWJP6bN7/view?usp=drive_link"> (View) </a></p>
 			</div>
 		</div>
 
@@ -417,7 +417,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1vi2YDQRO1xZEHojpqELkf8i3HiCo_qa4/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/16aCcML5NmBGabxA53_PnPfrjXRH5v2hd/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -600,7 +600,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1vi2YDQRO1xZEHojpqELkf8i3HiCo_qa4/view?usp=drive_link">Click Here</a></p>
+	            <p><a href="https://drive.google.com/file/d/16aCcML5NmBGabxA53_PnPfrjXRH5v2hd/view?usp=drive_link">Click Here</a></p>
 	          </div>
           </div>
 
