--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Ganesh Nanaso Kagale</span></p>
 										<p><span class="title-s">Job Role: </span> <span>Data Analyst</span></p>
-										<p><span class="title-s">Experience: </span> <span>5 Months</span></p>
+										<p><span class="title-s">Experience: </span> <span>7 Months</span></p>
 										<p><span class="title-s">Address: </span> <span>Pune, India</span></p>
 									  </div>
 									</div>
@@ -236,7 +236,7 @@
 											aria-valuemax="100"></div>
 									</div>
 
-									<span>Advanced SQL</span> <span class="pull-right">95%</span>
+									<span>Database</span> <span class="pull-right">95%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -266,7 +266,7 @@
 											aria-valuemax="100"></div>
 									</div>
 
-									<span>Tableau</span> <span class="pull-right">60%</span>
+									<span>Tableau</span> <span class="pull-right">40%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -291,14 +291,14 @@
 									 and continually seek opportunities to enhance my skills and contribute effectively to data-driven projects. 
 								</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Data Analytics</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Data Analytics,Technology</span></li>
+									<li class="d-flex"><span>Profile:</span> <span>Data Analysis</span></li>
+									<li class="d-flex"><span>Domain:</span> <span>Data Science & Analytics</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi, Marathi, Kanadda</span></li>
-									<li class="d-flex"><span>Tools:</span> <span>Power BI, &amp; Tableau</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Python, Excel,Advance SQL,Numpy,Pandas</span></li>
-									<li class="d-flex"><span>Interpersonal Skills:</span> <span>Negotiation and conflict resolution,          Self-Motivation,Teamwork </span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>Talend, Power BI, &amp; Tableau</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>HTML, Java, Python, MatPlotlib, Pandas, Numpy,Pandas, Excel, MySQL, PL/SQL, Ms-SQL, Database, AWS, DAX, VBA, ETL, Agile Methodlogy, </span></li>
+									<li class="d-flex"><span>Interpersonal Skills:</span> <span>Negotiation and conflict resolution,          Self-Motivation, Teamwork </span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Explore the world, Travel</span></li>
 									
 								</ul>
 							</div>
@@ -340,6 +340,7 @@
 				<h1 class="big big-2">Certification</h1>
 				<h2 class="mb-4">Certification</h2>
 				<p>- PGP in IT Mangement ( Oct/2023 - Pursing )</p>
+				<p>- Business Analyst - Udemy(Dec/2023 - Pursing)</a></p>
 				<p>- SQL Basic certification on HackerRank<a href="https://drive.google.com/file/d/1WU2lipVpl2tf5wiKihdMxOmDftLUEUzp/view?usp=drive_link"> (View) </a></p>
 				<p>- AWS Academy Graduate–AWS Academy Cloud Foundations<a href="https://drive.google.com/file/d/157qT4XGCF3LBqEttDukY3Xz7Wrwq2WwS/view?usp=drive_link"> (View) </a></p>
 				<p>- Intern Web Develope (2021)<a href="https://drive.google.com/file/d/1iKQTvNDItVE2jPktuMho9TvzJWJP6bN7/view?usp=drive_link"> (View) </a></p>
@@ -353,16 +354,17 @@
 		<br>
 		
 		<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-8">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">10/2023-Present</span>
 						<h2>Data Analyst</h2>
 						<span class="position">Aarohiinfo Information Technology</span>
 						<p class="mt-4">AIT, a leading Software company. It's a part of Group of companies of aarohiinfo. 
 							<ul>
-								<li>Analysed the project data.</li>
-								<li>Gathering knowledge in SQL, PowerBI, Tableau</li>
-								<li>Hands on experience in Data visualization tools</li>
+								<P>Live Project - Learning Mangement System ( LMS ) </P>
+								<li>Technology : Python, Excel, Jupiter, Power BI</li>
+								<li>Understanding Business Requirement</li>
+								<li>Hands on experience in Data Gathering to Data visualizations</li>
 							</ul>
 						</p>
 					</div>
@@ -417,7 +419,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/16aCcML5NmBGabxA53_PnPfrjXRH5v2hd/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1DMr1AN0hm7kwyvxJVoUB0bHCTGuT9qg-/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -428,21 +430,21 @@
     <section class="ftco-section" id="project-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
-          <div class="col-md-7 heading-section text-center ftco-animate">
+          <div class="col-md-8 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI.</p>
+            <p>Below are the sample Data Analytics projects on SQL, Python, Matpltlib, Power BI, Tableau, </p>
           </div>
         </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/ganeshkagale/-Exploratory-Data-Analysis-On-Airbnb-Data-" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://github.com/ganeshkagale/Marketing_campaign_analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ganeshkagale/-Exploratory-Data-Analysis-On-Airbnb-Data-">Exploratory Data Analysis On Airbnb Data</a></h3>
-                <p>Analyzed Airbnb data using advanced excel to identify gaps and increase the business growth.</p>
+                <h3 class="heading"><a href="https://github.com/ganeshkagale/Marketing_campaign_analysis">Marketing Campaign Analysis(MAR 24)</a></h3>
+                <p>Developing a Power BI dashboard and analysed data Using PLSQL Live connction</p>
               </div>
             </div>
           </div>
@@ -452,7 +454,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ganeshkagale/Diwali-Sales-analysis-using-python">Diwali sales analysis using python</a></h3>
+                <h3 class="heading"><a href="https://github.com/ganeshkagale/Diwali-Sales-analysis-using-python">Diwali sales analysis using python (Feb 24)</a></h3>
                 <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
               </div>
             </div>
@@ -463,7 +465,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/ganeshkagale/Bank-loan-data-analysis-using-PowerBI">Power BI Bank loan dashboard Project</a></h3>
+                <h3 class="heading"><a href="https://github.com/ganeshkagale/Bank-loan-data-analysis-using-PowerBI">Power BI Bank loan dashboard Project (Jan 24)</a></h3>
                 <p>Designed a power bi dashboard for Bank loan data to analyze the loan data acorss India.</p>
               </div>
             </div>
@@ -474,13 +476,12 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/ganeshkagale/Book-data-analyze-using-SQL-" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/ganeshkagale/Product_data_analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/ganeshkagale/Book-data-analyze-using-SQL-">SQL Project for Book data analyze </a></h3>
-				  <p>The purpose of book data analyse is explore insights within our book dataset, exploring patterns, and valuable information crucial for making the right decisions.
-				</p>
+				  <h3 class="heading"><a href="https://github.com/ganeshkagale/Product_data_analysis">Product Data Analysis (Dec 23)</a></h3>
+				  <p>Analysed product sales and profit using tableau public software</p>
 				</div>
 			  </div>
 			</div>
@@ -490,7 +491,7 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/ganeshkagale/College-Campus-Android-App">College campus Android Application</a></h3>
+				  <h3 class="heading"><a href="https://github.com/ganeshkagale/College-Campus-Android-App">College campus Android Application (2022)</a></h3>
 				  <p>The application is improving the education system in our college campus. The parent, teacher & student
 					may all link together with each other. So that there may be proper communication among them. The app
 					will give information about all the upcoming events in the campus including extracurricular activity.</p>
@@ -600,7 +601,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/16aCcML5NmBGabxA53_PnPfrjXRH5v2hd/view?usp=drive_link">Click Here</a></p>
+	            <p><a href="https://drive.google.com/file/d/1DMr1AN0hm7kwyvxJVoUB0bHCTGuT9qg-/view?usp=drive_link">Click Here</a></p>
 	          </div>
           </div>
 
